# dicom-dimse-c-store-example

./: LICENSE.md  README.md  mypy.ini  pyproject.toml
dicom-dimse-c-store-example/: scp.py  scu.py
