[tool.poetry]
name = "dicom-dimse-c-store-example"
version = "0.1.0"
description = "DICOM DIMSE C-STORE Python App"
authors = ["David Vuong <david.vuong@voltron.studio>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydicom = "^2.0.0"
pynetdicom = "^1.5.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.782"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
